--- a/index.html
+++ b/index.html
@@ -1,35 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Moje hobby</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body container="pasje">
-    <h1>Moje pasje</h1>
-    <nav>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h1>Moje pasje</h1>
+      <nav>
         <ul>
-            <li><a href=""></a>Kawa</li>
-            <li><a href=""></a>Książki</li>
-            <li><a href=""></a>Podróże</li>
+          <li><a href=""></a>Kawa</li>
+          <li><a href=""></a>Książki</li>
+          <li><a href=""></a>Podróże</li>
         </ul>
-    </nav>
-    <section id="hobby-kawa">
+      </nav>
+      <section id="hobby-kawa">
         <h2>Kawa - czarne złoto dnia</h2>
         <p>Pomaga mi w nauce</p>
         <p>Pobudza mój organizm</p>
-        <img src="kawa.png" alt="Zdjęcie kawy">
-    </section>
-    <section id="hobby-ksiazki">
+        <ol>
+          <li>latte</li>
+          <li>cappuccino</li>
+          <li>kawa czarna</li>
+          <li>espresso</li>
+        </ol>
+        <img src="kawa.jpg" alt="Zdjęcie kawy" />
+      </section>
+      <section id="hobby-ksiazki">
         <h2>Książki - poezja na kartce</h2>
-        <p>Bogacą moje słownictwo</p>
+        <p><span class="wyroznienie">Bogacą moje słownictwo</span></p>
         <p>Pomagają się uspokoić</p>
-    </section>
-    <section id="hobby-podroze">
+        <ul>
+          <li>Kriminał</li>
+          <li>Sensacja</li>
+          <li>thriller</li>
+          <li>Literatura obyczajowa</li>
+        </ul>
+        <img src="ksiazki.jpg" alt="Zdjęcie książki" />
+      </section>
+      <section id="hobby-podroze">
         <h2>Podróże - odpoczynek poza domem</h2>
         <p>Rozrzeszarzają znajomoćś o świecie</p>
         <p>Odprężają umysł</p>
-    </section>
-</body>
+        <table border="2">
+          <tr>
+            <td>Wenecja</td>
+          </tr>
+          <tr>
+            <td>Barcelond</td>
+          </tr>
+          <tr>
+            <td>Hawaje</td>
+          </tr>
+          <tr>
+            <td>Londyn</td>
+          </tr>
+          <tr>
+            <td>Paryż</td>
+          </tr>
+        </table>
+        <img src="podroz.jpg" alt="Zdjęcie podroz" />
+      </section>
+      <footer>
+        <p>&copy: Igor Pogoda, 2025</p>
+      </footer>
+    </div>
+  </body>
 </html>
