--- a/index.html
+++ b/index.html
@@ -16,20 +16,51 @@
         </ul>
     </nav>
     <section id="hobby-kawa">
-        <h2>Kawa - czarne złoto dnia</h2>
+        <h2><span class="wyroznienie">Kawa - czarne złoto dnia</span></h2>
         <p>Pomaga mi w nauce</p>
         <p>Pobudza mój organizm</p>
+        <ol>
+            <li>sypana</li>
+            <li>rozpuszczalna</li>
+        </ol>
         <img src="kawa.png" alt="Zdjęcie kawy">
     </section>
     <section id="hobby-ksiazki">
         <h2>Książki - poezja na kartce</h2>
         <p>Bogacą moje słownictwo</p>
         <p>Pomagają się uspokoić</p>
+        <ul>
+            <li>since fiction</li>
+            <li>kriminał</li>
+        </ul>
+        <img src="książki.png" alt="Zdjęcie książek">
     </section>
     <section id="hobby-podroze">
         <h2>Podróże - odpoczynek poza domem</h2>
         <p>Rozrzeszarzają znajomoćś o świecie</p>
         <p>Odprężają umysł</p>
+        <table border="2">
+            <tr>
+                <td>Paryż</td>
+            </tr>
+           
+            <tr>
+                <td>Barcelona</td>
+            </tr>
+            <tr>
+                <td>Ateny</td>
+            </tr>
+            <tr>
+                <td>Londyn</td>
+            </tr>
+            <tr>
+                <td>Oslo</td>
+            </tr>
+        </table>
+        <img src="podróż.png" alt="Zdjęcia podróżowania">
     </section>
+    <footer>
+        <p>&copy: Igor Pogoda, 2025</p>
+    </footer>
 </body>
 </html>
